# Library

./: CMakeLists.txt  Makefile  README.md  build.py  main.lang  make_debug.py  make_release.py  run  update_cmake.py
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  game  gui  lang  test
release/: CMakeCache.txt  Makefile  cmake_install.cmake  game  gui  lang  test
resources/lang/: main.lang
src/automaton641/game/: main.c
src/automaton641/gui/: main.c
src/automaton641/lang/: lib.c  main.c
src/automaton641/test/: main.c
